# drone-flight-visualizer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.fleet/: run.json
shaders/: CMakeLists.txt  default.vert  default_lit.frag  drone.vert  drone_lighting.frag  map.vert  map_lighting.frag  map_simple.frag  map_textured.frag  tri_mesh.vert  triangle.frag  triangle.vert  triangle_tester.frag  triangle_tester.vert
src/: CMakeLists.txt  context.cpp  context.h  drone_entrypoint.cpp  engine_test.cpp  main.cpp  mesh_entrypoint.cpp  mock_entrypoint.cpp  visualizer.cpp  visualizer.h
src/config/: config.h
src/flight_data/: drone_flight_data.cpp  drone_flight_data.h  flight_data.h  geo_types.h  mock_flight_data.cpp  mock_flight_data.h
src/glfw/: glfw.h  glfw_surface.cpp  glfw_surface.h
src/input/: input_handler.cpp  input_handler.h
src/map/: chunk_loader.cpp  chunk_loader.h  data_fetcher.cpp  data_fetcher.h  data_reader.cpp  data_reader.h  map_manager.cpp  map_manager.h
src/objects/: data_structs.h  drone.cpp  drone.h  drone_object.h  objects.cpp  objects.h  world_object.h
src/renderer/: config.h  renderer.cpp  renderer.h
src/structs/: data_structs.h
src/utils/: dataReader.cpp  dataReader.h  data_reader.cpp  data_reader.h  env.cpp  env.h  exepath.h  fetcher.cpp  fetcher.h  stb_image_loader.cpp  stb_image_loader.h  time_types.h
src/vulkan/: context.cpp  context.h  deletion_queue.cpp  deletion_queue.h  render_object.cpp  render_object.h  renderer.cpp  renderer.h  surface_wrapper.h  uniform_types.h  vk_engine.cpp  vk_engine.h  vk_engine_init.cpp  vk_engine_utils.cpp  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_texture.cpp  vk_texture.h  vk_traits.h  vk_types.h  vulkan.cpp
